--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "Home") %>
+
+<div class="row align-center">
+  <div class="small-6 columns">
+    <h1 class="text-center">Welcome to Twitar!</h1>
+    <a href="#" class="button hollow">Sign up</a>
+  </div>
+</div>
