--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,15 +1,23 @@
 <nav class="top-bar">
   <div class="top-bar-left">
     <ul class="menu">
-      <li class="menu-text">twitar</li>
-      <li><a href="#">One</a></li>
-      <li><a href="#">Two</a></li>
-      <li><a href="#">Three</a></li>
+      <li class="menu-text"><%= link_to "Mesboard", root_path %></li>
     </ul>
   </div>
   <div class="top-bar-right">
     <ul class="menu align-right">
-      <li><a href="#">Log in</a></li>
+      <% if user_signed_in? %>
+        <li>
+          <%= link_to 'Edit profile', edit_user_registration_path %>
+        </li>
+        <li>
+        <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+        </li>
+      <% else %>
+        <li>
+        <%= link_to('Login', new_user_session_path)  %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
