--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,12 @@
 
 <div class="row align-center">
   <div class="small-6 columns">
-    <h1 class="text-center">Welcome to Twitar!</h1>
-    <a href="#" class="button hollow">Sign up</a>
+    <h1 class="text-center">Welcome to Mesboard!</h1>
+
+    <% if user_signed_in? %>
+      <%= link_to "Dashboard", posts_index_path, class: "button hollow"  %>
+    <% else %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "button hollow"  %>
+    <% end %>
   </div>
 </div>
