--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,13 +23,16 @@
     <p class="alert"><%= alert %></p> -->
     <%= yield %>
 
-    <div class="row">
-      <div class="small-12 columns">
-        <div class="callout">
-          <%= debug(params) if Rails.env.development? %>
+    <% if Rails.env.development? %>
+      <div class="row">
+        <div class="small-12 columns">
+          <div class="callout">
+            <%= debug(params) %>
+          </div>
         </div>
       </div>
-    </div>
+    <% end %>
+
 
   </body>
 </html>
