Add validation for date. Change input for datetime

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,7 +11,7 @@
       <%= f.text_area :message %>
 
       <%= f.label :end_time %>
-      <%= f.time_field :end_time %>
+      <%= f.datetime_local_field :end_time %>
 
       <%= f.submit "Post my message", class: "button hollow" %>
 
