Add created_by variable in post creation

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,15 @@
 <%= provide(:title, 'Messages') %>
 
 <div class="row">
-  <div class="small-6 columns">
+  <div class="small-12 columns">
     <h1>Posts!</h1>
     <%= link_to "Create new post", posts_new_path, class: "button hollow" %>
     <h3>Recent posts</h3>
     <% @posts.each do |post| %>
       <div class="row">
-        <div class="small-4 columns"><%= post.created_by %></div>
-        <div class="small-4 columns"><%= post.message %></div>
-        <div class="small-4 columns"><%= post.end_time %></div>
+        <div class="small-4 columns"><strong><%= post.created_by %></strong></div>
+        <div class="small-4 columns"><p><%= post.message %></p></div>
+        <div class="small-4 columns"><p><%= I18n.localize(post.end_time) %></p></div>
       </div>
     <% end %>
   </div>
