--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,8 +2,8 @@
 
 <div class="row">
   <div class="small-6 columns">
-    <h1>Posts#new</h1>
-    <p>Find me in app/views/posts/new.html.erb</p>
+    <h1>Create post!</h1>
+    <p>All times are UTC. The time now is <strong><%= Time.zone.now %></strong></p>
     <%= form_for(@post, url: posts_create_path) do |f| %>
       <%= render 'shared/error_messages' %>
 
