--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -2,6 +2,10 @@
   <div class="top-bar-left">
     <ul class="menu">
       <li class="menu-text"><%= link_to "Mesboard", root_path %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to "Dashboard", posts_index_path  %></li>
+        <li><%= link_to "Create new post", posts_new_path  %></li>
+      <% end %>
     </ul>
   </div>
   <div class="top-bar-right">
