Add value for empty posts

--- a/app/assets/stylesheets/styles.sass
+++ b/app/assets/stylesheets/styles.sass
@@ -22,7 +22,9 @@
     border-color: white
     color: tomato
     background-color: white
-  // &.alert
-  //   background-color: black
-  //   color: white
-  //   &:hover
+
+.white-link
+  color: white
+  text-decoration: underline
+  &:hover
+    color: lightgray
