add main-content-padding class

--- a/app/assets/stylesheets/styles.sass
+++ b/app/assets/stylesheets/styles.sass
@@ -12,6 +12,9 @@
       border-color: tomato
       background-color: white
 
+.main-content-padding
+  padding: 2em 0
+
 .callout
   color: black
 
