--- a/app/assets/stylesheets/styles.sass
+++ b/app/assets/stylesheets/styles.sass
@@ -2,14 +2,14 @@
   height: 100vh
   padding-top: calc(30vh )
   padding-bottom: calc(100vh - 75% )
-  background-color: tomato
+  background-color: #1C5969
   color: white
   .button
     color: white
     border-color: white
     &:hover
-      color: tomato
-      border-color: tomato
+      color: #1C5969
+      border-color: #1C5969
       background-color: white
 
 .main-content-padding
@@ -23,8 +23,10 @@
   color: white
   &:hover
     border-color: white
-    color: tomato
+    color: #1C5969
     background-color: white
+
+
 
 .white-link
   color: white
