--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
   <div class="row align-center">
     <div class="small-2 columns small-centered">
       <% if user_signed_in? %>
-        <%= link_to "Dashboard", posts_index_path, class: "button hollow"  %>
+        <%= link_to "Dashboard", posts_path, class: "button hollow"  %>
       <% else %>
         <%= link_to "Sign Up", new_user_registration_path, class: "button hollow"  %>
       <% end %>
