--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -43,7 +43,7 @@
     <p>Unhappy? <%= button_to "Cancel my account",
                     registration_path(resource_name),
                     data: { confirm: "Are you sure?" },
-                    method: :delete , class: "button hollow alert" %></p>
+                    method: :delete , class: "button hollow warning" %></p>
 
     <%= link_to "Back", :back %>
 
